# FlyTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: docs.yml
TechnicalReport/: 2GD11 Alex Stukalovs' PPGA project's technical report.md  TechnicalReport.md
docs/: getting-started.md  index.md  pga.md
docs/scenes/: animation.md  camera.md  debug.md  imgui.md  index.md  input.md  lighting.md  materials.md  meshes.md  overview.md  primitives.md
docs/stylesheets/: extra.css
engine/include/: Application.h  Config.h  FlyTracer.h  GameScene.h  Mesh.h  Scene.h  VulkanHelpers.h  VulkanRenderer.h
engine/shaders/: common.glsl  intersections.glsl  lighting.glsl  materials.glsl  raytracer.comp
engine/src/: Application.cpp  GameScene.cpp  Mesh.cpp  Raytracer.cpp  VulkanRenderer.cpp
game/include/: BoltManager.h  Bolts.h  Collisions.h  Enemies.h  Enemy.h  EnemyManager.h  GlobalConstants.h  TestBoxScene.h  Utils.h
game/include/Scenes/: DebugDemoScene.h  MainScene.h  Scenes.h
game/resources/: capsule.blend  capsule.mtl
game/src/: BoltManager.cpp  Bolts.cpp  Collisions.cpp  DebugDemoScene.cpp  Enemies.cpp  Enemy.cpp  EnemyManager.cpp  MainScene.cpp  TestBoxScene.cpp  Utils.cpp  main.cpp
game/src/Scenes/: DebugDemoScene.cpp  MainScene.cpp  TestBoxScene.cpp
tests/: test_config.cpp  test_mesh.cpp
